Closed Bug 176056 Opened 23 years ago Closed 23 years ago

Crash setting up default SMTP server [@ nsSmtpService::SetDefaultServer]

Categories

(SeaMonkey :: MailNews: Account Configuration, defect)

x86
Windows 98
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.2final

People

(Reporter: greer, Assigned: sspitzer)

References

Details

(Keywords: crash, testcase, topcrash+)

Crash Data

Attachments

(1 file, 1 obsolete file)

The early returns of M1.2Beta show several crashes at the nsSmtpService::SetDefaultServer signature. The Trunk builds show only two crashes with the earliest (in the topcrash reports) being in the 20021016 windows build. The comments are below. Stack Trace: nsSmtpService::SetDefaultServer [c:/builds/seamonkey/mozilla/mailnews/compose/src/nsSmtpService.cpp line 913] XPTC_InvokeByIndex [c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp line 106] XPCWrappedNative::CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp line 1996] XPC_WN_GetterSetter [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp line 1291] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 841] js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 932] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 2648] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 857] js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 932] JS_CallFunctionValue [c:/builds/seamonkey/mozilla/js/src/jsapi.c line 3433] nsJSContext::CallEventHandler [c:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp line 1044] GlobalWindowImpl::RunTimeout [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 4670] GlobalWindowImpl::TimerCallback [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 5017] nsTimerImpl::Fire [c:/builds/seamonkey/mozilla/xpcom/threads/nsTimerImpl.cpp line 368] nsAppShell::GetNativeEvent [c:/builds/seamonkey/mozilla/widget/src/windows/nsAppShell.cpp line 237] nsXULWindow::ShowModal [c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsXULWindow.cpp line 296] nsContentTreeOwner::ShowAsModal [c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsContentTreeOwner.cpp line 449] nsWindowWatcher::OpenWindowJS [c:/builds/seamonkey/mozilla/embedding/components/windowwatcher/src/nsWindowWatcher.cpp line 783] GlobalWindowImpl::OpenInternal [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 4313] GlobalWindowImpl::OpenDialog [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 3081] XPTC_InvokeByIndex [c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp line 106] XPCWrappedNative::CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp line 1996] XPC_WN_CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp line 1267] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 841] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 2804] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 857] js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 932] JS_CallFunctionValue [c:/builds/seamonkey/mozilla/js/src/jsapi.c line 3433] nsJSContext::CallEventHandler [c:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp line 1044] nsJSEventListener::HandleEvent [c:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp line 184] nsEventListenerManager::HandleEventSubType [c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line 1187] nsEventListenerManager::HandleEvent [c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line 2183] nsXULElement::HandleDOMEvent [c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3470] PresShell::HandleDOMEventWithTarget [c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6268] nsButtonBoxFrame::MouseClicked [c:/builds/seamonkey/mozilla/layout/xul/base/src/nsButtonBoxFrame.cpp line 200] nsButtonBoxFrame::HandleEvent [c:/builds/seamonkey/mozilla/layout/xul/base/src/nsButtonBoxFrame.cpp line 147] PresShell::HandleEventInternal [c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6237] PresShell::HandleEventWithTarget [c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6188] nsEventStateManager::CheckForAndDispatchClick [c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp line 2879] nsEventStateManager::PostHandleEvent [c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp line 1873] PresShell::HandleEventInternal [c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6241] PresShell::HandleEvent [c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6143] nsViewManager::HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 2194] nsView::HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsView.cpp line 304] nsViewManager::DispatchEvent [c:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 1934] HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsView.cpp line 83] nsWindow::DispatchEvent [c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1065] nsWindow::DispatchWindowEvent [c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1082] nsWindow::DispatchMouseEvent [c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 5248] ChildWindow::DispatchMouseEvent [c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 5503] nsWindow::ProcessMessage [c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 4034] nsWindow::WindowProc [c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1331] USER32.dll + 0x2a290 (0x77e3a290) USER32.dll + 0x45b1 (0x77e145b1) USER32.dll + 0x5b1d (0x77e15b1d) nsContentTreeOwner::ShowAsModal [c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsContentTreeOwner.cpp line 449] nsWindowWatcher::OpenWindowJS [c:/builds/seamonkey/mozilla/embedding/components/windowwatcher/src/nsWindowWatcher.cpp line 783] GlobalWindowImpl::OpenInternal [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 4313] GlobalWindowImpl::OpenDialog [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 3081] XPTC_InvokeByIndex [c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp line 106] XPCWrappedNative::CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp line 1996] XPC_WN_CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp line 1267] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 841] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 2804] Source File : c:/builds/seamonkey/mozilla/mailnews/compose/src/nsSmtpService.cpp line : 913 (12788184) Comments: Adding a SMTP server to the settings. No e-mail were setup yet and just finished setup up a news server (12777643) Comments: Edit Mail & News Settings - SMTP server - Advanced (option to add extra SMTP servers) clicked cancel in dialogbox and Mozilla crashed. (12772259) Comments: Trying to set up an email account. (12702671) Comments: With no mail account set up started mail and canceled the New Account Wizard. Brought up the Mail and Newsgroups Account Settings dialog. Clicked the Advanced button for Outgoing Server (SMTP) and then clicked Cancel from the "advanced" dialog that (12702671) Comments: followed.
Keywords: crash, topcrash
I saw this bug on Windows NT 4.0 platform too. The same actions sequence, the same result.
Making this topcrash+ because it seems like we have a reproducible test case. From looking at the comments, you'll crash by following these steps: 1. Make sure you don't have any mail/news accounts setup. 2. Open mail/news and cancel out of the new account wizard. 3. Go to Edit->Mail & Newsgroups Account Settings->Outgoing Server(SMTP) 4. Click on the Advanced button in the prefs window and cancal out of the dialog box. 5. Boom! I personally tried to reproduce this with MozillaTrunk build 2002102108 and was not able to crash on my Windows 2000 pro machine.
Keywords: topcrashtestcase, topcrash+
racham, this is a trunk topcrasher and we need a fix for 1.2. 1.2 is getting very close. Can you give us a status on this bug?
Blocks: 1.2
Sorry. I was dragged onto do something else and Varada was taking care of smtp bugs. He probably missed this one. He is on vacation from today onwards. Anyway, I will get to this one right away and try out with the listed reproducible steps. Bhuvan
Status: NEW → ASSIGNED
this sounds like one of those bugs that was caused by component.reg / .xpt changes, installing a new mozilla over another (older) installation.
> this sounds like one of those bugs that was caused by component.reg / .xpt > changes, installing a new mozilla over another (older) installation. maybe I should try the steps before flapping my gums. I can reproduce the crash. working on a fix.
Assignee: racham → sspitzer
Status: ASSIGNED → NEW
Target Milestone: --- → mozilla1.2final
Attached patch patch (obsolete) — Splinter Review
Attached patch complete patchSplinter Review
Attachment #104974 - Attachment is obsolete: true
Comment on attachment 104975 [details] [diff] [review] complete patch this has sr=bienvenu
Attachment #104975 - Flags: superreview+
mail sent to drivers for approval
Status: NEW → ASSIGNED
Comment on attachment 104975 [details] [diff] [review] complete patch a=asa for checkin to 1.2 (on behalf of drivers)
Attachment #104975 - Flags: approval+
fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
Crash Signature: [@ nsSmtpService::SetDefaultServer]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: