fix for crasher bug #176056.  crash when setting up default smtp servers.  r/sr=bienvenu, a=asa.